--- a/lab-rest2/src/main/resources/application.yml
+++ b/lab-rest2/src/main/resources/application.yml
@@ -2,3 +2,18 @@ spring:
     jpa:
         hibernate:
             ddl-auto: update
+
+google:
+  client:
+    clientId: YOUR CLIENT ID
+    clientSecret: YOUR SECRET KEY
+    accessTokenUri: https://www.googleapis.com/oauth2/v4/token
+    userAuthorizationUri: https://accounts.google.com/o/oauth2/v2/auth
+    clientAuthenticationScheme: form
+    scope:
+        - openid
+        - email
+        - profile
+  resource:
+    userInfoUri:  https://www.googleapis.com/oauth2/v3/userinfo
+    preferTokenInfo: true
